Frost: Fix alignment issues in the site editor.

--- a/frost/assets/css/style-editor.css
+++ b/frost/assets/css/style-editor.css
@@ -408,3 +408,8 @@ img {
 .is-style-no-margin {
 	margin: 0;
 }
+
+.wp-block [data-align="full"] {
+	margin-left: calc(-100vw / 2 + 100% / 2) !important;
+	margin-right: calc(-100vw / 2 + 100% / 2) !important;
+}
