--- a/frost/style.css
+++ b/frost/style.css
@@ -97,7 +97,7 @@ blockquote {
 	text-decoration: none;
 }
 
-/* Navigation 
+/* Navigation
 --------------------------------------------- */
 
 .wp-block-navigation .wp-block-page-list,
@@ -426,8 +426,8 @@ img {
 --------------------------------------------- */
 
 .wp-site-blocks .alignfull {
-	margin-left: calc(-100vw / 2 + 100% / 2);
-	margin-right: calc(-100vw / 2 + 100% / 2);
+	margin-left: calc(-100vw / 2 + 100% / 2) !important;
+	margin-right: calc(-100vw / 2 + 100% / 2) !important;
 	max-width: 100vw;
 }
 
@@ -655,18 +655,18 @@ img {
 
 	/* Pullquote
 	--------------------------------------------- */
-	
+
 	.wp-block-pullquote.alignleft,
 	.wp-block-pullquote.alignright {
 		max-width: 300px;
 	}
-	
+
 	.wp-block-pullquote.alignleft {
 		float: left;
 		margin-left: -100px;
 		margin-right: 30px;
 	}
-	
+
 	.wp-block-pullquote.alignright {
 		float: right;
 		margin-left: 30px;
